# brobrain

./: .gitignore  README.md  dev.ipynb  dev_datamodels.ipynb  dev_llms.ipynb  pyproject.toml  test_brain.py
brobrain/: __init__.py
brobrain/backends/: __init__.py  base_backend.py  duckdb_backend.py  postgresql_backend.py
brobrain/core/: __init__.py  brain.py  database.py  interfaces.py  models.py  utils.py
brobrain/execution/: __init__.py  procedures.py  states.py
brobrain/knowledge/: __init__.py  sources.py  world.py
brobrain/llms/local/: embedding.py  llm.py
brobrain/memories/: base.py  conversation.py  duck_base.py  episode.py
brobrain/models/: base.py  conversation.py  episode.py
brobrain/working/: __init__.py  conversations.py  episodes.py
examples/: custom_backend_example.py
lessons/: create.md
